--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,39 @@
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>2.6.1</version>
 			</dependency>
+			
+			<!-- excel操作库 https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<!-- 加jsp修改的地方 -->
+		<!-- web  依赖      -->
+
+
+
+ <!-- servlet 依赖 -->
+ <dependency>
+           <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <scope>provided</scope>
+ </dependency>
+<dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+</dependency>
+ <!-- tomcat 的支持.-->
+<dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+                <scope>provided</scope>
+ </dependency>
+<dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-jasper</artifactId>
+ </dependency>
+		
 	</dependencies>
 
 	<build>
