--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poll2.0?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
 mybatis.mapper-locations= classpath:/mapper/**/*.xml 
